# trajopt_example

./: CMakeLists.txt
config/: 4.yaml
include/: geometry.h  utils.h  yaml.h
launch/: fetch_trajopt_example_launch.launch
src/: collision_object.h  fetch_trajopt_example.cpp  geometry.cpp  utils.cpp  yaml.cpp
